# rust-rsl-app

./: Cargo.toml  Dioxus.toml
assets/: main.css  tailwind.css
assets/models/: classes.json  rsl_model.tflite
src/: bd.rs  main.rs
src/components/: mod.rs
src/components/accordion/: style.css
src/components/button/: mod.rs
