[package]
name = "PISAPOPA"
version = "0.1.0"
authors = ["john"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.4", features = ["router", "fullstack", "desktop"] }
rusqlite = { version =  "0.39.0", features = ["bundled"] }
directories = "6.0.0"
anyhow = "1.0.102"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
server = ["dioxus/server"]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
